@startuml



class SceneManager {

    +static SceneManager& getInstance()
    +void addScene(const Scene& scene)
    +void loadScene(int index)
    +void loadScene(const std::string& sceneName)
    +Scene* getCurrentScene()
    - SceneManager()
    - scenes : vector<Scene>
    - currentSceneIndex : int
}

class Scene {

    +void addGameObject(GameObject* object)
    +void loadContents()
    - sceneName : string
    - gameObjects : vector<GameObject*>
}

class EngineBravo {
    +void initialize()
    - SceneManager& sceneManager
}

SceneManager "1" *-- "many" Scene
EngineBravo --> SceneManager : creates
@enduml